--- a/Assignments/AI_Assignment2_JoseLinares_1992112.ipynb
+++ b/Assignments/AI_Assignment2_JoseLinares_1992112.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMAoqJaGMNjB2ibZVd+Lz0c",
+      "authorship_tag": "ABX9TyPIbbIjqtGnEjK4jPHOqlJ5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,47 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/blinares333/IA_IB_2022/blob/main/Assignments/AI_Assignment2_JoseLinares_1992112.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**A2: Python Exercises.**\n",
+        "Jose Brayan Linares Gutierrez 1992112 N4"
+      ],
+      "metadata": {
+        "id": "gGCnSkhb-cYE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "message= input('what is your name? ')\n",
+        "greet='Hi'\n",
+        "Ng=('No greet')\n",
+        "ng=['Ana','ana','John', 'john', 'Peter', 'peter']\n",
+        "if message in ng:\n",
+        " print(Ng)\n",
+        "else:\n",
+        " print(greet, message)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "quz6u43c-bxg",
+        "outputId": "c66d87b2-cea5-441e-ac28-b930a6056838"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "what is your name? Jose\n",
+            "Hi Jose\n"
+          ]
+        }
       ]
     },
     {
